# MyProjects

./: .gitignore  Projects.code-workspace  README.md
AudioManipulate/: .gitignore
AudioManipulate/example/: example01.py  example02.py  example03.py  example04.py  example05.py  example06.py  example07.py  example08.py  example09.py
AudioManipulate/record/: play.py  record.py
EncoderDecoderSystem/: .gitignore  CMakeLists.txt  decoder.h  encoder.h
FavorSystem/: README.md  config.py  config.yaml  database.py  entity.py  main.py  people.py
FavorSystem/entity/: __init__.py  people.py
FeatureExtraction/: FeatureExtract.py  main.cpp
KaggleIdentifyContrails/: ActualTraining.py  Dataset.py  LightningModule.py  Submission.py  baseline.py  config.yaml  draw.py
OpenCVPractice/: README.md
PythonDocx/: doc2docx.py  main.py  xls2xlsx.py
PythonQt/: .gitignore  Import.py  ModelDefault.py  ModelItem.py  ModelShowCase.py  MotionCaptureSystem.py  PythonQt.pyproject  QtJsonTreeWidget.py  QtLabelCVWidget.py  QtPandaWidget.py  README.md  README_en.md  SkeletonMapping.py  config.json  config.prc  main.py  models.json  requirements.txt  test.json  utils.py
QTalkRoom/: .gitignore  CMakeLists.txt  CMakeUserPresets.json
QTalkRoomServer/: .gitignore  CMakeLists.txt
QTalkRoomServer/QTalkRoomServer/: CMakeLists.txt  QTalkRoomServer.cpp  QTalkRoomServer.h  QTalkRoomServer.rc  QTalkRoomServer.ui  main.cpp
khlbot/: testModule.py
knowledge/: pom.xml
others/: README.md  brain_electron_experience.ipynb  group.md  nerf2.py  torch_nerf.py  妈妈的计件表提成公式.txt
(+114 files in other folders)
